fixed the background for the navbar on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -399,11 +399,6 @@ NAVBAR
   padding-bottom: 1.563rem;
 }
 
-.navbar-b.navbar-reduce {
-  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
-  height: 80px;
-}
-
 .navbar-b.navbar-trans .nav-item,
 .navbar-b.navbar-reduce .nav-item {
   position: relative;
@@ -467,10 +462,11 @@ NAVBAR
 }
 
 .navbar-b.navbar-reduce {
-  transition: all .5s ease-in-out;
+  transition: all .3s ease-in-out;
   background-color: #fff;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
 }
 
 .navbar-b.navbar-reduce .nav-link {
